# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: blank.yml
page_analyzer/: app.py  config.py  db.py  url_checker.py  url_repository.py  urls.py  utilities.py  validator.py
page_analyzer/templates/: index.html  layout.html  url_show.html  urls.html
page_analyzer/templates/components/: form.html  navbar.html
page_analyzer/templates/errors/: not_found.html  server_error.html
page_analyzer/templates/urls/: index.html  url_checks.html  urls.html  urls_list.html
