[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["erzhan <erzhan.sarsenov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "page_analyzer" }
]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"

python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.10"
validators = "^0.34.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
pydantic-settings = "^2.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "^7.1.1"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
